tests/ui/parser/macro/macros-no-semicolon-items.stderr
error: macros must contain at least one rule
  --> $DIR/macros-no-semicolon-items.rs:1:1
   |
LL | macro_rules! foo()
   | ^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

